add homework 5 oop